--- a/symfony/templates/weather/current.html.twig
+++ b/symfony/templates/weather/current.html.twig
@@ -6,7 +6,6 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        <h1>{{ world }}</h1>
     </body>
 </html>
